[package]
name = "ds_arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }

[[bin]]
name = "tasks"
path = "src/tasks.rs"

[[bin]]
name = "par_iters"
path = "src/par_iters.rs"
